crates/walrus-parser/snapshots/ignore_pat.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Ignore(
            Underscore {
                span: 0..1,
            },
        ),
    ),
)
