crates/walrus-parser/snapshots/infer_type.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Infer(
            Underscore {
                span: 0..1,
            },
        ),
    ),
)
