crates/walrus-parser/snapshots/int_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Lit(
            Int(
                Dec(
                    DecInt {
                        span: 0..3,
                        text: "123",
                    },
                ),
            ),
        ),
    ),
)
