crates/walrus-parser/snapshots/lit_pat.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got

---
Ok(
    (
        [],
        Lit(
            Int(
                Dec(
                    DecInt {
                        span: 0..1,
                        text: "5",
                    },
                ),
            ),
        ),
    ),
)
