crates/walrus-parser/snapshots/loop_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Loop(
            LoopExpr {
                kw_loop: KwLoop {
                    span: 0..4,
                },
                expr: Block(
                    Block {
                        lcurly: LCurly {
                            span: 5..6,
                        },
                        stmts: [],
                        expr: None,
                        rcurly: RCurly {
                            span: 6..7,
                        },
                    },
                ),
            },
        ),
    ),
)
