crates/walrus-parser/snapshots/named_field_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [
            1..2@Dot ".",
            2..3@Ident "y",
        ],
        Var(
            Var(
                Ident {
                    span: 0..1,
                    text: "x",
                },
            ),
        ),
    ),
)
